# CppND-System-Monitor-Project-Updated

./: CMakeLists.txt  Makefile
include/: linux_parser.h  linux_parser_pure.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  linux_parser_pure.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
test/: test_format.cpp  test_linux_parser_integration.cpp  test_linux_parser_pure.cpp  test_process.cpp  test_processor.cpp  test_system.cpp  test_tests.cpp
test_data/test_filesystem_roots/one/etc/: passwd
test_data/test_filesystem_roots/one/proc/: stat  uptime
test_data/test_filesystem_roots/one/proc/490/: cmdline  stat  status
test_data/test_filesystem_roots/one/proc/83/: cmdline  stat  status
test_data/test_filesystem_roots/two/etc/: os-release  passwd
test_data/test_filesystem_roots/two/proc/: meminfo  stat  uptime  version
test_data/test_filesystem_roots/two/proc/4482/: status
